Added deleted method to api doc
