# storage/api-docs/api-docs.json
@@ -154,8 +154,8 @@
                 "tags": [
                     "Posts"
                 ],
-                "summary": "Create a blog post",
-                "description": "Create blog post",
+                "summary": "Creates a blog post",
+                "description": "Creates a blog post",
                 "operationId": "createPost",
                 "requestBody": {
                     "required": true,
@@ -203,7 +203,7 @@
                 "tags": [
                     "Posts"
                 ],
-                "summary": "Single blog post",
+                "summary": "Shows a single blog post",
                 "description": "Shows a single blog post",
                 "operationId": "showPost",
                 "parameters": [
@@ -246,8 +246,8 @@
                 "tags": [
                     "Posts"
                 ],
-                "summary": "Update blog post",
-                "description": "Update blog post",
+                "summary": "Updates blog post",
+                "description": "Updates a single blog post",
                 "operationId": "updatePost",
                 "parameters": [
                     {
@@ -277,6 +277,66 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/Post"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "scalar": "bearer"
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Posts"
+                ],
+                "summary": "Deletes a blog post",
+                "description": "Deletes a blog post",
+                "operationId": "deletePost",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "Post ID",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "202": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "description": "Status of the operation",
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "description": "The response message",
+                                            "type": "string",
+                                            "example": "Post successfully deleted"
+                                        }
+                                    },
+                                    "type": "object"
                                 }
                             }
                         }
